ingress/examples/wordpress-phpmyadmin-mysql/pods-svc.yaml
# If you use digital ocean's managed kubernetes clusters
# Then the block storage will get created by default
# you don't need to set up the block storage, the PVC request will create it

---

#######
# IMPORTANT NOTE:
# These examples are dependent on the do-claim.yaml
# You must create the PVC claim to run this
# eg:
# $ kubectl apply -f do-claim.yaml
#########

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: expose-mysql
  name: mysql
spec:
  ports:
  - port: 3306
  selector:
    app: mysql
  clusterIP: None
---
kind: Pod
apiVersion: v1
metadata:
  name: mysql
  labels: 
    app: mysql
spec:
  containers:
    # MYSQL
    - name: mysql
      image: mysql:5.5 
      ports: 
      - containerPort: 3306
        name: mysql
      volumeMounts:
        - name: database-storage
          mountPath: /var/lib/mysql
  volumes:
  - name: database-storage
    persistentVolumeClaim:
      claimName: csi-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: expose-phpmyadmin
  name: phpmyadmin
spec:
  ports:
  - port: 80
  selector:
    app: wordpress
    tier: phpmyadmin
  type: ClusterIP
---
kind: Pod
apiVersion: v1
metadata:
  name: phpmyadmin
  labels: 
    app: wordpress
    tier: phpmyadmin
spec:
  containers:
    # PHPMYADMIN
    - name: phpmyadmin
      image: phpmyadmin/phpmyadmin:4.9
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: expose-wordpress
  name: wordpress-svc
spec:
  ports:
  # - nodePort: 30703
  #   port: 80
  #   protocol: TCP
  #   targetPort: 80
  #   name: wordpress
  - port: 80
  selector:
    app: wordpress
    tier: wordpress
  type: ClusterIP
---
kind: Pod
apiVersion: v1
metadata:
  name: wordpress
  labels: 
    app: wordpress
    tier: wordpress
spec:
  containers:
    # WORDPRESS
    - name: wordpress
      image: wordpress:4.8-apache
---
