ingress/examples/wordpress-phpmyadmin-mysql/ingress-rules.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wp-ingress
  annotations:
    nginx.ingress.kubernetes.io/app-root: /
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: wordpress.myuniquemoo.com
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress-svc
          servicePort: 80
  - host: phpmyadmin.myuniquemoo.com
    http:
      paths:
      - path: /
        backend:
          serviceName: phpmyadmin
          servicePort: 80

---

# Refs:
# https://github.com/kubernetes/ingress-nginx/blob/master/docs/user-guide/nginx-configuration/annotations.md
